name:                 Geotherm
version:              0.1.0.0
synopsis:             A Haskell package that can calculate the isentropic geotherm from thermodynamic properties
-- description:
-- license:
-- license-file:
homepage:             https://github.com/singularitti/Geotherm.hs
author:               Qi Zhang
maintainer:           singularitti@outlook.com
category:             Math
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
